some app.py work, initial upload should be working

--- a/data/scrape_wiki.ipynb
+++ b/data/scrape_wiki.ipynb
@@ -16,6 +16,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bird = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
